--- a/simpleGUI/simpleGUI.vcxproj.filters
+++ b/simpleGUI/simpleGUI.vcxproj.filters
@@ -30,6 +30,12 @@
     <ClCompile Include="mouseProcessor.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="TextProcessor.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="Fonts.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="simpleGUI.h">
@@ -45,6 +51,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="mouseProcessor.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Fonts.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
