Сделал основу меню (окна)

--- a/simpleGUI/simpleGUI.vcxproj
+++ b/simpleGUI/simpleGUI.vcxproj
@@ -149,6 +149,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="mouseProcessor.cpp" />
     <ClCompile Include="simpleGUI.cpp" />
+    <ClCompile Include="SubWindow.cpp" />
     <ClCompile Include="TextBox.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -160,6 +161,7 @@
     <ClInclude Include="mouseProcessor.h" />
     <ClInclude Include="simpleGUI.h" />
     <ClInclude Include="SLLStructure.h" />
+    <ClInclude Include="SubWindow.h" />
     <ClInclude Include="TextBox.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
