--- a/simpleGUI/simpleGUI.vcxproj
+++ b/simpleGUI/simpleGUI.vcxproj
@@ -143,6 +143,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BoundingBox.cpp" />
+    <ClCompile Include="CheckBox.cpp" />
     <ClCompile Include="Fonts.cpp" />
     <ClCompile Include="GUITimer.cpp" />
     <ClCompile Include="line_functions.cpp" />
@@ -154,6 +155,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BoundingBox.h" />
+    <ClInclude Include="CheckBox.h" />
     <ClInclude Include="DLLStructure.h" />
     <ClInclude Include="Fonts.h" />
     <ClInclude Include="GUITimer.h" />
